fixed some slide layout issues.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -784,6 +784,7 @@ article {
       position: relative;
       display: flex;
       border: 6px solid transparent;
+      cursor: pointer;
       .card-information, .image-container {
 
       }
